test/compile_errors/lib/extension_coherence/base.w
pub type Target {
    value: i32,
}
